@@ -7,6 +7,8 @@ Revelation changelog
 	* the text entry in the find dialog is activated after
 	the "No match found" dialog has been displayed
 
+	* added import/export of GNOME Password Manager files
+
 2004-08-02  Erik Grinaker <erikg@codepoet.no>
 
 	* added access keys to popup menus
